--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/ConcludeCare.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/ConcludeCare.cshtml
@@ -1,7 +1,212 @@
-﻿
+﻿@model DAL.ViewModel.ViewDoc
+
+
 @{
     ViewData["Title"] = "ConcludeCare";
+    Layout = "~/Views/Shared/_ProviderDashBoard.cshtml";
 }
 
-<h1>ConcludeCare</h1>
+
+
+
+
+<div class="bg-body-secondary" style="margin-bottom:2.5rem">
+    <div class="mx-auto pt-4  pb-3" style="width:70%;">
+        <div class="d-flex justify-content-between my-2">
+            <h3>Conclude Care</h3><br />
+
+
+            <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+
+        </div>
+        <div class="PatientInfoTable border rounded shadow bg-white p-4">
+            <span> patient name</span>
+            <h3 class="text-info">
+                @ViewBag.username <span class="fs-5 text-black">......................</span>
+            </h3>
+            <span>Check here for any files that you or the doctors of your subsequents requestor have attached for you</span>
+
+
+            @* ----------------------------------------------------------------- *@
+
+            <form asp-action="uploadfile" asp-controller="ProviderDashBoard" asp-route-reqid="@Model.requestid" enctype="multipart/form-data">
+                <div class="input-group row p-2 mx-auto mt-3" style="height:60px">
+                    <div class="d-flex">
+                        <label for="fileUpload" class="col d-flex">
+                            <div class="col white-bag p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
+                            <div id="btn" class="p-1  d-flex btn btn-info align-items-center justify-content-center">
+
+                                <i class="bi bi-cloud-arrow-up text-white"></i>
+                                <button class="ps-2 btn btn-outline-info text-white" type="submit"> Upload</button>
+
+                            </div>
+                            <input type="file" name="file" class="form-control-file" id="fileUpload" hidden multiple>
+                        </label>
+
+                    </div>
+                </div>
+            </form>
+            @* ----------------------------------------------------------------- *@
+
+            <div class="d-flex justify-content-between mt-3">
+                <h4 class="mt-1">View Documents</h4>
+
+            </div>
+            <div class="table-responsive" style="height:180px !important" >
+                <table class="table text-center ">
+                    <thead class="table-secondary">
+                        <tr>
+                            <th scope="col"><input type="checkbox" id="chkbox" /></th>
+                            <th scope="col">Documents</th>
+                            <th scope="col">Upload Date</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody class="bg-white">
+
+                        @foreach (var item in Model.requestwisefile)
+                        {
+                            <tr>
+                                <td><input type="checkbox" class="chkboxind" data-filename="@item.FileName" /></td>
+                                <td>@item.FileName</td>
+                                <td>@item.CreatedDate</td>
+
+                                <td>
+
+                                    <a href="~/Files/@item.FileName" download>
+                                        <button type="button" class="btn btn-primary btn  border border-info bg-white text-info shadow-none text-decoration-none ">
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                 width="24"
+                                                 class="bi bi-cloud-arrow-up"
+                                                 height="24"
+                                                 fill="currentColor"
+                                                 viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd"
+                                                      d="M7.646 5.146a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708z" />
+                                                <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383m.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z" />
+                                            </svg>
+                                        </button>
+                                    </a>
+
+
+
+                                </td>
+                            </tr>
+                        }
+
+
+                    </tbody>
+                </table>
+            </div>
+                <form asp-action="ConcludeCareSubmit" asp-route-id="@Model.requestid">
+            <div>
+                <h4>Provider Notes</h4>
+                <textarea rows="6" name="ProviderNote" class="w-100">
+
+                </textarea>
+            </div>
+            <div class="d-flex justify-content-end mt-3">
+                <button type="submit" class="btn btn-info text-white">Conclude Care</button>
+            </div>
+            </form> 
+        </div>
+    </div>
+
+</div>
+
+
+<script>
+
+
+    document.getElementById("chkbox").addEventListener("change", function () {
+
+
+        // Toggle all checkboxes based on the state of the "Select All" checkbox
+        let checkboxes = document.querySelectorAll(".chkboxind");
+        checkboxes.forEach(function (checkbox) {
+            checkbox.checked = document.getElementById("chkbox").checked;
+        });
+    });
+
+    document.getElementById("DownloadAll").addEventListener("click", function () {
+        // Get selected filenames
+        let selectedFiles = [];
+        let checkboxes = document.querySelectorAll(".chkboxind:checked");
+        checkboxes.forEach(function (checkbox) {
+            selectedFiles.push(checkbox.dataset.filename);
+        });
+
+        // Download selected files
+        selectedFiles.forEach(function (filename) {
+            var link = document.createElement("a");
+            link.href = "/Files/" + filename;
+            link.download = filename;
+            link.style.display = "none";
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        });
+    });
+
+
+    // ----------------------------
+    document.getElementById("DeleteAll").addEventListener("click", function () {
+        console.log("gbg")
+        let selectedFiles = [];
+        let checkboxes = document.querySelectorAll(".chkboxind:checked");
+        checkboxes.forEach(function (checkbox) {
+            selectedFiles.push(checkbox.dataset.filename);
+        });
+        if (selectedFiles.length > 0) {
+            $.ajax({
+                method: 'POST',
+                url: '/AdminDash/DeleteSelectedFiles',
+                data: { filenames: selectedFiles },
+                success: function (result) {
+                    window.location.href = '/AdminDash/ViewUpload/' + @Model.requestid;
+                },
+
+
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        } else {
+            alert("Please select files to delete.");
+        }
+    });
+    // -----------deleteselected end-----------------
+
+
+    // -----------sendmail-----------------
+    document.getElementById("SendMail").addEventListener("click", function () {
+        var id = @Model.requestid;
+
+        console.log("gbg")
+        let selectedFiles = [];
+        let checkboxes = document.querySelectorAll(".chkboxind:checked");
+        checkboxes.forEach(function (checkbox) {
+            selectedFiles.push(checkbox.dataset.filename);
+        });
+        if (selectedFiles.length > 0) {
+            $.ajax({
+                method: 'POST',
+                url: '/AdminDash/SendFiles',
+                data: { filenames: selectedFiles, id: id },
+                success: function (result) {
+                    window.location.href = '/AdminDash/ViewUpload/' + @Model.requestid;
+                },
+
+
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        } else {
+            alert("Please select files to sendmail.");
+        }
+    });
+    // ----------------------------
+</script>
+
 
