--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableConclude.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableConclude.cshtml
@@ -19,12 +19,10 @@
         <tr class="fs-5">
             <th scope="col">Name</th>
             <th scope="col"></th>
-            <th scope="col">Date of Birth</th>
-            <th scope="col">Physician Name</th>
-            <th scope="col">Date Of Service</th>
+          
             <th scope="col">Phone</th>
             <th scope="col">Address</th>
-            <th scope="col">Chatwith</th>
+           
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -70,11 +68,7 @@
                         </button>
                     </a>
                 </td>
-                <td class="my-auto"> @item.BirthDate</td>
-
-
-                <td class="my-auto">physician Name</td>
-                <td class="my-auto">Date Of Service</td>
+          
                 <td class="my-auto ">
                     @if (item.requesttypeid == 1)
                     {
@@ -113,17 +107,6 @@
                 </td>
                 <td class="my-auto">@item.Address</td>
 
-                <td class="my-auto">
-                    <button class="btn border rounded  text-white ">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="me-2 bi bi-person-lines-fill" viewBox="0 0 16 16">
-                            <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                        </svg>Patient
-                    </button>  <button class="btn border rounded text-white  ">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill me-2" viewBox="0 0 16 16">
-                            <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                        </svg>Provider
-                    </button>
-                </td>
                 <td class="my-auto">
                     <button type="button" class="btn border border-2 text-white rounded  dropdown-toggle " data-bs-toggle="dropdown" aria-expanded="false">
                         Action
@@ -165,7 +148,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <a asp-action="ConcludeCare" class="dropdown-item" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
                                     <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
                                 </svg>Conclude Care
