--- a/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
+++ b/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
@@ -82,7 +82,7 @@
                         <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard" style="text-decoration:none">
                             <button class="nav-link  text-info
                 
-                            @(new string[] { "ProviderDashBoard", "ViewCase", "AccountAccess" }
+                            @(new string[] { "ProviderDashBoard", "ViewCase", "ViewNotes","Accept","ViewUpload","SendOrder","EncounterForm" }
                                 .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")">
                                 Dashboard
                             </button>
@@ -98,9 +98,9 @@
                     </li>
         
                     <li class="nav-item">
-                        <a asp-action="AdminProfile" asp-controller="AdminDash" style="text-decoration:none">
+                        <a asp-action="PhysicianProfile" asp-controller="ProviderDashBoard"  style="text-decoration:none">
                             <button class="nav-link text-info
-                            @(ViewContext.ActionDescriptor.RouteValues["action"] == "AdminProfile" ? "active" : "")">
+                            @(ViewContext.ActionDescriptor.RouteValues["action"] == "PhysicianProfile" ? "active" : "")">
                                 My Profile
                             </button>
                         </a>
@@ -130,7 +130,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a asp-action="AdminProfile" asp-controller="AdminDash" style="text-decoration:none">
+                            <a asp-action="AdminProfile" asp-controller="AdminDash"  style="text-decoration:none">
                                 <button class="nav-link text-info
                             @(ViewContext.ActionDescriptor.RouteValues["action"] == "AdminProfile" ? "active" : "")">
                                     My Profile
@@ -157,7 +157,7 @@
 
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
+    <script src="~/js/Patient_request.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
