--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -151,7 +151,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-action="ViewNotes" asp-route-id="@item.requestid">
+                            <a asp-action="ViewNotes" asp-route-id="@item.requestid" style="text-decoration:none">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                         <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
