--- a/HelloDoc/Views/ME_ForSomeOne/Me.cshtml
+++ b/HelloDoc/Views/ME_ForSomeOne/Me.cshtml
@@ -68,7 +68,7 @@
                                            id="floatingInput"
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">First Name</label>
-                                    <span asp-validation-for="FirstName" class="text-danger mb-2"></span>
+                                   <span asp-validation-for="FirstName" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                             <div class="col col-12 col-sm-6 mb-3">
@@ -118,6 +118,7 @@
                                            id="floatingInput"
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">Mobile No</label>
+                                    <span asp-validation-for="PhoneNumber" class="text-danger mb-2"></span>
                                 </div>
                             </div>
 
@@ -174,11 +175,15 @@
                         <div class="row">
                             <div class="col col-sm-6 col-12">
                                 <div class="form-floating mb-3">
-                                    <input type="text"
-                                           asp-for="State"
-                                           class="form-control"
-                                           id="floatingPassword"
-                                           placeholder="Password" />
+
+                                    <select asp-for="State" class="form-select" aria-label="Default select example">
+                                        <option selected>Open this select menu</option>
+                                        @foreach (var item in Model.regions)
+                                        {
+                                            <option value="@item.RegionId">@item.Name</option>
+                                        }
+                                    </select>
+
                                     <label for="floatingPassword">State</label>
                                 </div>
                             </div>
@@ -190,6 +195,7 @@
                                            id="floatingPassword"
                                            placeholder="Password" />
                                     <label for="floatingPassword">Zip Code</label>
+                                    <span asp-validation-for="ZipCode" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                         </div>
