--- a/HelloDoc/Views/ME_ForSomeOne/SomeOne.cshtml
+++ b/HelloDoc/Views/ME_ForSomeOne/SomeOne.cshtml
@@ -25,7 +25,7 @@
             <!-- -----------------back button-------------------------- -->
             <div class="bg-body-secondary">
                 <div class="d-flex justify-content-end back">
-                    <a asp-action="Index" asp-controller="DashBoard" class="btn btn-outline-info text-center p-2 btn-p">
+                    <a asp-action="SomeOne" asp-controller="ME_ForSomeOne" class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
                              height="16"
@@ -119,6 +119,7 @@
                                            id="floatingInput"
                                            placeholder="name@example.com" />
                                     <label for="floatingInput">Mobile No</label>
+                                    <span asp-validation-for="PhoneNumber" class="text-danger mb-2"></span>
                                 </div>
                             </div>
 
@@ -175,11 +176,15 @@
                         <div class="row">
                             <div class="col col-sm-6 col-12">
                                 <div class="form-floating mb-3">
-                                    <input type="text"
-                                           asp-for="State"
-                                           class="form-control"
-                                           id="floatingPassword"
-                                           placeholder="Password" />
+
+                                    <select asp-for="State" class="form-select" aria-label="Default select example">
+                                        <option selected>Open this select menu</option>
+                                        @foreach (var item in Model.regions)
+                                        {
+                                            <option value="@item.RegionId">@item.Name</option>
+                                        }
+                                    </select>
+
                                     <label for="floatingPassword">State</label>
                                 </div>
                             </div>
@@ -191,6 +196,7 @@
                                            id="floatingPassword"
                                            placeholder="Password" />
                                     <label for="floatingPassword">Zip Code</label>
+                                    <span asp-validation-for="ZipCode" class="text-danger mb-2"></span>
                                 </div>
                             </div>
                         </div>
