--- a/HelloDoc/Views/ProviderDashBoard/Scheduling/Scheduling.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/Scheduling/Scheduling.cshtml
@@ -1,66 +1,42 @@
+﻿
 ﻿@{
-    Layout = "~/Views/Shared/_AdminDash.cshtml";
+	Layout = "~/Views/Shared/_ProviderDashBoard.cshtml";
 }
+
 <style>
-	.fc-event-end .fc-event-time {
+
+.fc-event-end .fc-event-time {
 		display: none;
 	}
-</style>
+	</style>
 <div class="container-fluid bg-body-secondary" style="height:80vh !important">
-<div class="justify-content-between d-flex container-fluid mb-2 position-relative container my-3">
-    <div class="">
-        <h3 class="mt-2"> Scheduling </h3>
-    </div>
-    <div>
-        <a asp-action="AdminDash" class="btn btn-outline-info mt-2"> ❮  Back </a>
-    </div>
-</div>
+	<div class="justify-content-between d-flex container-fluid mb-2 position-relative container my-3">
+		<div class="">
+			<h3 class="mt-2"> My Schedule </h3>
+		</div>
+		<div>
+			<a asp-action="AdminDash" class="btn btn-outline-info mt-2"> ❮  Back </a>
+		</div>
+	</div>
 
-<div class="container bg-white pt-3 px-4 position-relative rounded-2">
-
-    <div class="p-0 m-0 d-flex justify-content-between">
-        <div class="d-flex border border-secondary  rounded align-items-center my-2 col-3">
-				<select class="form-control shadow-none border-0" id="SelectedRegion"  name="SelectedStateId">
-					<option value="0">All</option>
-					<option value="1">alaska</option>
-					<option value="2">MaryLand</option>
-					<option value="3">NewYork</option>
-					<option value="4">Virginia</option>
-            </select>
-        </div>
-        <div class="d-flex mr-0 py-2 justify-content-end">
-				<a asp-action="MdOnCall">
-					<button class="btn btn-info mx-2 shadow-none" id="providerBtn" style="width:fit-content">
-						<span>Providers On Call</span>
-					</button>
-				</a>
-				<a asp-action="ReviewShift">
-					<button class="btn btn-info mx-2 shadow-none" id="adminBtn" style="width:fit-content">
-						<span>Shift for review</span>
-					</button>
-				</a>
-				<button class="btn btn-info mx-2 shadow-none" data-bs-toggle="modal" data-bs-target="#createShiftModal" id="adminBtn" style="width:fit-content">
-                <span>Add New Shift</span>
-            </button>
-        </div>
-    </div>
+	<div class="container bg-white pt-3 px-4 position-relative rounded-2">
 		<div id="calendarTitle" class="calendar-current-date fs-4 fw-bolder"></div>
-    <div class="m-0 pe-2 py-0 d-flex justify-content-end my-3">
-        <div class="m-0 p-0 text-danger">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                <circle cx="8" cy="8" r="8" />
-            </svg>
-            <span class="text-body me-3">Pending Shifts</span>
-        </div>
-        <div class="m-0 p-0 text-success">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
-                <circle cx="8" cy="8" r="8" />
-            </svg>
-            <span class="text-body">Approved Shifts</span>
-        </div>
-    </div>
-    <div class="my-3 p-0 d-flex justify-content-between">
-        <div>
+		<div class="m-0 pe-2 py-0 d-flex justify-content-end my-3">
+			<div class="m-0 p-0 text-danger">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
+					<circle cx="8" cy="8" r="8" />
+				</svg>
+				<span class="text-body me-3">Pending Shifts</span>
+			</div>
+			<div class="m-0 p-0 text-success">
+				<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
+					<circle cx="8" cy="8" r="8" />
+				</svg>
+				<span class="text-body">Approved Shifts</span>
+			</div>
+		</div>
+		<div class="my-3 p-0 d-flex justify-content-between">
+			<div>
 				<button class="rounded-5 btn btn-info text-white me-3" onclick="calendar.prev()">
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
 						<path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z" />
@@ -74,15 +50,16 @@
 						<path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
 					</svg>
 				</button>
-        </div>
-        <div>
-				<button class="btn btn-info px-3 shadow-none" onclick="calendar.changeView('resourceTimeline')">Day</button>
-				<button class="btn btn-info px-3 shadow-none" onclick="calendar.changeView('resourceTimelineWeek')">Week</button>
-				<button class="btn btn-info px-3 shadow-none" onclick="calendar.changeView('dayGridMonth')">Month</button>
-        </div>
-    </div>
-    <div id="calendar" class="bottom-0"></div>
-</div>
+			</div>
+			<div>
+
+				<button class="btn btn-success mx-2 shadow-none" data-bs-toggle="modal" data-bs-target="#createShiftModal" id="adminBtn" style="width:fit-content">
+					<span>Add New Shift</span>
+				</button>
+			</div>
+		</div>
+		<div id="calendar" class="bottom-0"></div>
+	</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.11/index.global.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@6.1.11/index.global.min.js"></script>
@@ -92,21 +69,21 @@
 	document.addEventListener('DOMContentLoaded', function () {
 		var calendarEl = document.getElementById('calendar');
 		var region = $('#SelectedRegion').val();
-		getPhysicianShift(region);
+		getPhysicianShift();
 
 		//write a function of the get physician
-		function getPhysicianShift(region) {
-			fetch('/AdminDash/GetPhysicianShift?region=' + region)
+		function getPhysicianShift() {
+			fetch('/ProviderDashBoard/GetPhysicianShift')
 				.then(response => response.json())
 				.then(data => {
-					const resources = data.map(physician => ({
-						id: physician.physicianId,
-						title: physician.firstName,
-					}));
+					const resources = {
+						id: data.physicianId,
+						title: data.firstName,
+					};
 
-
+					
 					// Fetch events from the server
-					fetch('/AdminDash/GetEvents?region=' + region)
+					fetch('/ProviderDashBoard/GetEvents')
 						.then(response => response.json())
 						.then(data => {
 							console.log(data)
@@ -121,9 +98,9 @@
 								ShiftDetailId: event.shiftDetailId,
 								region: event.region,
 								status: event.status,
-								allDay:false
+								allDay: false
 							}));
-
+							
 							initializeCalendar(resources, events);
 						})
 						.catch(error => console.error(error));
@@ -131,8 +108,9 @@
 				.catch(error => console.error(error));
 		}
 
-	
+
 		function initializeCalendar(resources, events) {
+
 			$('#SelectedRegion').on('change', function () {
 				const newRegion = $(this).val();
 				getPhysicianShift(newRegion);
@@ -145,11 +123,9 @@
 				headerToolbar: false,
 				initialView: 'dayGridMonth',
 				dayMaxEvents: 4,
-				editable:true,
+				editable: true,
 				views: {
-					resourceTimelineDay: {
-						buttonText: 'Day',
-					},
+
 					resourceTimelineWeek: {
 						buttonText: 'Week',
 						slotDuration: { days: 1 },
@@ -164,22 +140,24 @@
 							meridiem: 'short'
 						}
 					},
-					resourceTimelineMonth: {
-						buttonText: 'Month',
-						eventLimit: true, // Set the event limit to 3
-						eventLimitText: "More"
-					} 
+
 				},
 
-			
+
 				datesSet: function (info) {
-					var title = info.view.title;
-					$("#calendarTitle").html(title);
+					var startDate = info.view.activeStart;
+					var endDate = info.view.activeEnd;
+
+					var formattedStartDate = startDate.toLocaleDateString('en-GB', { day: 'numeric', month: 'long' });
+					var formattedEndDate = endDate.toLocaleDateString('en-GB', { day: 'numeric', month: 'long', year: 'numeric' });
+
+					var dateRangeText = 'Schedule For: ' + formattedStartDate + ' - ' + formattedEndDate;
+
+					$("#calendarTitle").html(dateRangeText);
 				},
-				resources: resources,
+				resources: [resources],
 				events: events,
-				eventLimit: 3,
-				eventLimitText: "More",
+				
 				eventClick: function (info) {
 					// Open the modal when an event is clicked
 					$('#eventModal').modal('show');
@@ -194,16 +172,16 @@
 					});
 
 
-					
-					
-						
-			
+
+
+
+
 					$('#eventModal').on('click', '#returnshift', function () {
 						// Get the ShiftDetailId from the event
 						var shiftDetailId = $('#shiftDetailId').val(); // Assuming you have an input field with id 'shiftDetailId' in your modal
 						// Call AJAX to return
 						$.ajax({
-							url: '/AdminDash/ReturnShift',
+							url: '/ProviderDashBoard/ReturnShift',
 							type: 'POST',
 							data: { shiftDetailId: shiftDetailId, region: region },
 							success: function (response) {
@@ -213,7 +191,7 @@
 								const events = response.events.map(event => ({
 									id: event.id,
 									resourceId: event.resourceId,
-									title: `${event.start.split("T")[1].substr(0, 5)} - ${event.end.split("T")[1].substr(0, 5)}: ${event.title}`,
+									title: event.title,
 									start: event.start,
 									end: event.end,
 									eventBackgroundColor: event.status == 1 ? '#e39de8' : '#32d97d',
@@ -236,7 +214,7 @@
 						// Get the ShiftId from the event
 						var shiftDetailId = $('#shiftDetailId').val();
 						$.ajax({
-							url: '/AdminDash/DeleteShift',
+							url: '/ProviderDashBoard/DeleteShift',
 							type: 'POST',
 							data: { shiftDetailId: shiftDetailId, region: region },
 							success: function (response) {
@@ -272,7 +250,7 @@
 						console.log(shiftDetailId);
 						// Call AJAX to save
 						$.ajax({
-							url: '/AdminDash/ChangeShift',
+							url: '/ProviderDashBoard/ChangeShift',
 							type: 'POST',
 							data: {
 								shiftDetailId: shiftDetailId,
@@ -317,40 +295,40 @@
 					var event = info.event;
 					var modalBody = document.querySelector('#eventModal .modal-body');
 					var eventDetails = `
-									<form asp-action="viewshift">
-									<input class="d-none" id="shiftDetailId" value="${shiftDetailId}">
-									   <div class="form-floating mb-3 mt-3">
-								<select class="form-control" aria-label="Default select example" id="selectregion" disabled>
-									<option value="">${region[0].name}</option>
+										<form asp-action="viewshift">
+										<input class="d-none" id="shiftDetailId" value="${shiftDetailId}">
+										   <div class="form-floating mb-3 mt-3">
+									<select class="form-control" aria-label="Default select example" id="selectregion" disabled>
+										<option value="">${region[0].name}</option>
 
-								</select>
+									</select>
+								</div>
+										<div class="form-floating mb-3 mt-3">
+														<select class="form-select pt-1 physicianDropdown" asp-for="Physicianid" id="physicianSelect" aria-label="Default select example" disabled>
+														<option value="" selected disabled>${event.title}</option>
+													</select>
+												</div>
+														<div class="col-md-12 form-floating mb-3">
+										<input id="StartDateView" class="form-control rounded vcs" name="Startdate" type="date" placeholder="Suchtext" autocomplete="off" value="${formatDate(event.start)}" disabled>
+								<label for="StartDate">Shifted Date</label>
+								<div class="d-flex gap-2 mt-3">
+								<div class="col-md-6 form-floating mb-3">
+										<input id="StartTimeView" asp-for="Starttime" disabled class="form-control rounded vcs" name="Starttime" type="time" placeholder="Suchtext" autocomplete="off" value="${formatTime(event.start)}" >
+								<label for="StartTime">Start</label>
 							</div>
-									<div class="form-floating mb-3 mt-3">
-													<select class="form-select pt-1 physicianDropdown" asp-for="Physicianid" id="physicianSelect" aria-label="Default select example" disabled>
-													<option value="" selected disabled>${event.title}</option>
-												</select>
-											</div>
-													<div class="col-md-12 form-floating mb-3">
-									<input id="StartDateView" class="form-control rounded vcs" name="Startdate" type="date" placeholder="Suchtext" autocomplete="off" value="${formatDate(event.start)}" disabled>
-							<label for="StartDate">Shifted Date</label>
-							<div class="d-flex gap-2 mt-3">
 							<div class="col-md-6 form-floating mb-3">
-									<input id="StartTimeView" asp-for="Starttime" disabled class="form-control rounded vcs" name="Starttime" type="time" placeholder="Suchtext" autocomplete="off" value="${formatTime(event.start)}" >
-							<label for="StartTime">Start</label>
-						</div>
-						<div class="col-md-6 form-floating mb-3">
-									<input id="EndTimeView" asp-for="Endtime" disabled	 class="form-control rounded vcs" name="Endtime" type="time" placeholder="Suchtext" autocomplete="off" value="${formatTime(event.end)}" >
-							<label for="EndTime">End</label>
-						</div>
-						</div>
-							<div class="d-flex justify-content-end gap-2">
-						<button class="btn btn-info" id="returnshift"  type="button">Return</button>
-					<button class="btn btn-info" id="editbtn" type="button">Edit</button>
-						<button class="btn btn-success d-none" id="savebtn"  type="button">Save</button>
-					<button class="btn btn-danger" id="deletebtn" type="button">Delete</button>
-				</div>
-						</form>
-										`;
+										<input id="EndTimeView" asp-for="Endtime" disabled	 class="form-control rounded vcs" name="Endtime" type="time" placeholder="Suchtext" autocomplete="off" value="${formatTime(event.end)}" >
+								<label for="EndTime">End</label>
+							</div>
+							</div>
+								<div class="d-flex justify-content-end gap-2">
+							<button class="btn btn-info" id="returnshift"  type="button">Return</button>
+						<button class="btn btn-info" id="editbtn" type="button">Edit</button>
+							<button class="btn btn-success d-none" id="savebtn"  type="button">Save</button>
+						<button class="btn btn-danger" id="deletebtn" type="button">Delete</button>
+					</div>
+							</form>
+											`;
 					modalBody.innerHTML = eventDetails;
 				},
 				eventBackgroundColor: function (event) {
@@ -366,13 +344,13 @@
 					resourceObj.el.querySelector('.fc-datagrid-cell-main').appendChild(img);
 				},
 
-			
+
 				dateClick: function (info) {
 					debugger
 					var shiftedDateISO = info.dateStr;
 					var shiftedDate = shiftedDateISO.split('T')[0];
 					var startTime = new Date(info.date).toTimeString().substr(0, 5);
-					
+
 
 					$('#StartDate').val(shiftedDate);
 					$('#StartTime').val(startTime);
@@ -410,7 +388,7 @@
 </script>
 
 
-<partial name="CreateShiftPartial"></partial>
+<partial name="Scheduling/CreateShiftPartial"></partial>
 
 <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
