--- a/HelloDoc/Views/Request/Business_Request.cshtml
+++ b/HelloDoc/Views/Request/Business_Request.cshtml
@@ -102,6 +102,7 @@
                                        id="floatingInput"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">Mobile No</label>
+                                    <span asp-validation-for="PhoneNumberother" class="text-danger mb-2"></span>
                             </div>
                         </div>
                         <div class="col col-12 col-sm-6 mb-3">
@@ -212,6 +213,7 @@
                                        asp-for="PhoneNumber_P"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">Mobile No</label>
+                                 <span asp-validation-for="PhoneNumber_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                     </div>
@@ -260,6 +262,7 @@
                                        id="floatingPassword"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Zip Code</label>
+                                    <span asp-validation-for="Zipcode" class="text-danger mb-2"></span>
                             </div>
                         </div>
                     </div>
