--- a/HelloDoc/Views/Request/Patient_Request.cshtml
+++ b/HelloDoc/Views/Request/Patient_Request.cshtml
@@ -9,9 +9,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - HelloDoc</title>
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+
 	<link rel="stylesheet" href="~/css/Patient_Request.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -112,12 +110,13 @@
 							</div>
 							<div class="col col-sm-6 col-12">
 								<div class="form-floating mb-3">
-									<input type="tel"
+									<input type="text"
 										   asp-for="PhoneNumber"
 										   class="form-control"
 										   id="floatingInput"
 										   placeholder="name@example.com" />
 									<label for="floatingInput">Mobile No</label>
+									<span asp-validation-for="PhoneNumber" class="text-danger mb-2"></span>
 								</div>
 							</div>
 
@@ -196,6 +195,7 @@
 										   id="floatingPassword"
 										   placeholder="Password" />
 									<label for="floatingPassword">Zip Code</label>
+									<span asp-validation-for="ZipCode" class="text-danger mb-2"></span>
 								</div>
 							</div>
 						</div>
@@ -242,11 +242,7 @@
 
 		</div>
 	</div>
-	</div>
-	</div>
-	@section scripts {
-		<!-- jQuery script -->
-		<script src="~/lib/jquery/jquery.min.js"></script>
+
 
 		<script>
 			$(document).ready(function () {
@@ -283,10 +279,8 @@
 
 			// ------------------------
 		</script>
-	}
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
+	
+	
 	<script src="~/js/Patient_request.js" asp-append-version="true"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
