--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -22,7 +22,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""></script>
-
+   
 </head>
 
 <body>
@@ -75,13 +75,14 @@
 
             </div>
             <!-- Nav tabs -->
-
             <div class="w-100 shadow  px-2 px-md-5  pt-2  border-5 border-bottom-5 d-none d-sm-block pb-1  ">
-                <ul class="nav nav-tabs-info nav-underline   fs-4 " id="pills-tab" role="tablist">
+                <ul class="nav nav-tabs-info nav-underline fs-4 " id="pills-tab" role="tablist">
                     <li class="nav-item ">
                         <a asp-action="AdminDash" asp-controller="AdminDash" style="text-decoration:none">
                             <button class="nav-link  text-info
-                     @(ViewContext.ActionDescriptor.RouteValues["action"] == "AdminDash" ? "active" : "")">
+
+                        @(new string[] { "AdminDash", "ViewNotes", "ViewCase" }
+                            .Contains(ViewContext.ActionDescriptor.RouteValues["action"]) ? "active" : "")">
                                 Dashboard
                             </button>
                         </a>
@@ -185,6 +186,7 @@
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <partial name="_ValidationScriptsPartial"></partial>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> 
    *@
@@ -194,6 +196,7 @@
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/js/UserAccess.js"></script>
     <script src="~/js/Partner.js"></script>
+
 
   
 
