--- a/HelloDoc/wwwroot/css/Patient_login.css
+++ b/HelloDoc/wwwroot/css/Patient_login.css
@@ -21,6 +21,7 @@ h1 {
 
 img#img-logo {
     height: 10rem !important;
+    opacity:1;
 }
 
   
@@ -65,10 +66,10 @@ img#img-logo {
 
 .main-img {
     background-image: url("../images/11116016_415.jpg");
-    filter: blur(6px);
+    filter: blur(2px) !important;
     margin-left: auto;
     margin-right: auto;
-    opacity:0.4 !important;
+    opacity:0.2 !important;
 }
 
 /* ------------------------------------------------------------- */
@@ -93,7 +94,7 @@ img#img-logo {
 
     .main-img {
         background-image: url("../images/11116016_415.jpg");
-        filter: blur(6px);
+        filter: blur(2px) !important;
     }
 
     /* ------------------------------------- */
