--- a/HelloDoc/Views/AdminDash/MdOnCall.cshtml
+++ b/HelloDoc/Views/AdminDash/MdOnCall.cshtml
@@ -31,12 +31,12 @@
 
 
                 <div>
-                    <button class="btn btn-info mx-2 shadow-none" id="providerBtn" style="width:fit-content">
+                    <a asp-action="PhysicianScheduling" class="btn btn-info mx-2 shadow-none" id="providerBtn" style="width:fit-content">
                         <span>Calander View</span>
-                    </button>
-                    <button class="btn btn-info mx-2 shadow-none" id="approved" style="width:fit-content">
+                    </a>
+                    <a asp-action="ReviewShift" class="btn btn-info mx-2 shadow-none" id="approved" style="width:fit-content">
                         <span>Shift For Review</span>
-                    </button>
+                    </a>
 
                 </div>
 
