--- a/HelloDoc/Views/AdminDash/PhysicianProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/PhysicianProfile.cshtml
@@ -319,7 +319,7 @@
                         </div>
 
 
-                        if(@Model.SignatureFilename != null)
+                        @if(Model.SignatureFilename != null)
                         {
                         <img src="~/Physician/@Model.physicianid/@Model.SignatureFilename" alt="Signature" id="signatureImage" style="max-width: 100%; max-height: 200px;" />
                         }
