--- a/HelloDoc/Views/AdminDash/RecordsMenu/SearchRecords.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/SearchRecords.cshtml
@@ -11,7 +11,7 @@
             <button class="btn btn-outline-info mt-3" onclick="ExportFile()">Export Data to Excle</button>
         </div>
     </div>
-    <div class="mx-0 row px-4 border-bottom-0 border border-secondary rounded-top mt-3">
+    <div class="mx-0 row px-4 border-bottom-0 border border-secondary white-bag rounded-top mt-3">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
             <select class="form-select shadow-none statusSelect p-3" id="status" aria-label="Floating label select example">
                 <option value="0">Select Request Status</option>
@@ -46,7 +46,7 @@
             <span class="text-danger"></span>
         </div>
     </div>
-    <div class="mx-0 row px-4 border-top-0 border-bottom-0 border border-secondary rounded-top  pb-4 ">
+    <div class="mx-0 row px-4 border-top-0 white-bag border-bottom-0 border border-secondary rounded-top  pb-4 ">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
             <input type="date" class="form-control shadow-none endDate" id="ToDateOfService">
             <label for="floatingInput" class="customlable">To Date Of Service</label>
@@ -74,11 +74,11 @@
             <label for="floatingInput5" class="ms-2">Mobile Number</label>
         </div>
     </div>
-    <div class="d-flex justify-content-end border-bottom-0 border-top-0 border border-secondary pb-2  pe-4">
+    <div class="d-flex justify-content-end white-bag border-bottom-0 border-top-0 border border-secondary pb-2  pe-4">
         <button class="btn btn-outline-info" onclick="RemoveFilters()">Clear</button>
         <button class="btn btn-info mx-3" onclick="GetSearchRecord()">Search</button>
     </div>
-    <div class="border-top-0 border table-responsive border-secondary rounded-bottom  px-3 h-50" id="PatientRecordsPartial">
+    <div class="border-top-0 border table-responsive border-secondary white-bag rounded-bottom  px-3 h-50" id="PatientRecordsPartial">
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
