--- a/HelloDoc/Views/AdminDash/CreateProviderAccount.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateProviderAccount.cshtml
@@ -11,13 +11,13 @@
             <h4 class="h4 mt-5 mb-3">Create Provider Account</h4>
         </div>
         <div class="d-flex">
-            <button class="btn btn-outline-info mt-5 mb-3 ms-auto " onclick="backToProvider()">
+            <a asp-action="Provider" class="btn btn-outline-info mt-5 mb-3 ms-auto " onclick="backToProvider()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16"
                      height="16" fill="currentColor" class="bi bi-chevron-left fw-medium mb-1" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                           d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
                 </svg>Back
-            </button>
+            </a>
         </div>
     </div>
 </div>
