--- a/HelloDoc/Views/AdminDash/RecordsMenu/BlockHistory.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/BlockHistory.cshtml
@@ -4,9 +4,9 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div class="container-fluid" style="height:80vh!important">
+<div class="container-fluid bg-light" style="height:80vh!important">
     <h4 class="py-3">Block history</h4>
-    <div class="mx-0 row px-4 border-bottom-0 border border-secondary rounded-top pt-3 pb-4 ">
+    <div class="mx-0 row px-4 border-bottom-0 white-bag border border-secondary rounded-top pt-3 pb-4 ">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
             <input type="text"
                    class="form-control"
@@ -34,11 +34,11 @@
             <label for="floatingInput5" class="ms-2">Mobile Number</label>
         </div>
     </div>
-    <div class="d-flex justify-content-end border-bottom-0 border-top-0 border border-secondary pb-2  pe-4">
+    <div class="d-flex justify-content-end border-bottom-0 white-bag border-top-0 border border-secondary pb-2  pe-4">
         <button class="btn btn-outline-info" onclick="RemoveFilters()">Clear</button>
         <button class="btn btn-info mx-3" onclick="GetBlockPatientRecord()">Search</button>
     </div>
-    <div class="border-top-0 border border-secondary rounded-bottom  px-3 overflow-auto " id="ll">
+    <div class="border-top-0 border border-secondary rounded-bottom  white-bag px-3 overflow-auto " id="ll">
     </div>
 </div>
 
