--- a/HelloDoc/Views/AdminDash/RecordsMenu/PatientHistory.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/PatientHistory.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container-fluid bg-light mb-5" style="height:80%!important">
     <h4 class="py-3">Patient history</h4>
-    <div class="mx-0 row px-4 border-bottom-0 border border-secondary rounded-top pt-3 pb-4 ">
+    <div class="mx-0 row px-4 border-bottom-0 white-bag border border-secondary rounded-top pt-3 pb-4 ">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
             <input type="text"
                    class="form-control"
@@ -36,11 +36,11 @@
             <label for="floatingInput5" class="ms-2">Mobile Number</label>
         </div>
     </div>
-    <div class="d-flex justify-content-end border-bottom-0 border-top-0 border border-secondary pb-2  pe-4">
+    <div class="d-flex justify-content-end border-bottom-0 white-bag border-top-0 border border-secondary pb-2  pe-4">
         <button class="btn btn-outline-info" onclick="RemoveFilters()">Clear</button>
         <button class="btn btn-info mx-3" onclick="GetPatientRecord()">Search</button>
     </div>
-    <div class=" border-top-0 border border-secondary rounded-bottom  px-3 overflow-auto" style="height: 80% !important" id="PatientHistoryPartial">
+    <div class=" border-top-0 border border-secondary white-bag rounded-bottom  px-3 overflow-auto" style="height: 80% !important" id="PatientHistoryPartial">
     </div>
 </div>
 
