--- a/HelloDoc/Views/AdminDash/SendOrder.cshtml
+++ b/HelloDoc/Views/AdminDash/SendOrder.cshtml
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col col-sm-6  col-12">
                     <div class="form-floating mb-3">
-                        <input type="text"
+                        <input type="email"
                             asp-for="Email"
                                class="form-control"
                                id="Email"
